comecei a fazer a pagina inicial

--- a/inicial.html
+++ b/inicial.html
@@ -17,17 +17,21 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+	
 	</head>
 
  <body>
 	<img class = "imagem1" src = "google_maps.JPG" alt = 'Google maps'>
 
 		<header class = "header">
-			<i class="fas fa-arrow-right"></i>
-			<div class = 'parent'>
-				
 
+
+			<div class = "parent">
+				<ul>
+				<li><i class="fas fa-search"></i></li>	
+				<li><i class="fas fa-question"></i></li>
+				
+			</ul>
 
 				<!-- <ul>
 					<li class = "child_1"> <a href="pag_2.html?topico=topico1"> Aplicando Conhecimentos na Sociedade </a></li>
