--- a/somos.html
+++ b/somos.html
@@ -6,7 +6,7 @@
 		<title>Quem Somos!</title>
 		<link href="reset.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-		<link href="style_inicial.css" rel="stylesheet">
+		<link href="somos.css" rel="stylesheet">
 		<script src="lib/app.js"></script>
     	<script src="lib/database.js"></script>
     	<script src="lib/codes.js"></script>
@@ -19,14 +19,24 @@
 
 <body>
 
-	Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
-	<ul>
-		Integrantes:
-		Beatriz Alexandre
-		Beatriz Mie
-		Manuela Castilla
-		Vitória de Almeida 
-	</ul>
+	<div class = 'texto'>
+
+		Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
+
+		<p>
+
+			Integrantes:
+
+			<ul>
+					Beatriz Alexandre
+					Beatriz Mie
+					Manuela Castilla
+					Vitória de Almeida 
+			</ul>
+
+		</p>
+		
+	</div>		
 
 </body>
 
