--- a/inicial.html
+++ b/inicial.html
@@ -3,10 +3,11 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 <head>
-		<title>Projetos</title>
+		<title>GMA</title>
 		<link href="reset.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 		<link href="style_inicial.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<script src="lib/app.js"></script>
     	<script src="lib/database.js"></script>
     	<script src="lib/codes.js"></script>
@@ -22,28 +23,43 @@
 
  <body>
 	<img class = "imagem1" src = "google_maps.JPG" alt = 'Google maps'>
+	<div class = 'texto'>
 
-		<header class = "header">
+		Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
 
+		<p>
 
-			<div class = "parent">
-				<ul>
-				<li><i class="fas fa-search"></i></li>	
-				<li><i class="fas fa-question"></i></li>
-				
+			Integrantes:
+
+			<ul>
+					Beatriz Alexandre
+					Beatriz Mie
+					Manuela Castilla
+					Vitória de Almeida 
 			</ul>
 
-				<!-- <ul>
-					<li class = "child_1"> <a href="pag_2.html?topico=topico1"> Aplicando Conhecimentos na Sociedade </a></li>
-					<li class = "child_2"> <a href="pag_2.html?topico=topico2"> Construções </a></li>
-					<li class = "child_3"> <a href="pag_2.html?topico=topico3"> Estudos Exatos </a></li>
-					<li class = "child_4"> <a href="pag_2.html?topico=topico4"> Programação </a></li>
-
-				</ul> -->
-			</div>
-		</header>
-	
-	<main>
+		</p>
 		
-	</main>	
+	</div>		
+
+		<div class="container">
+  
+		  <div class="row">
+
+		    <div class="col search">
+		      <a href=""><i class="fas fa-search"></i></a>
+		    </div>
+
+		    <div class="col">
+		     <a href=""><i class="fas fa-question"></i></a>
+		    </div>
+
+		    <div class="col">
+		      <a href=""><i class="fas fa-question"></i></a>
+		    </div>
+
+		  </div>
+
+		</div>
+	
 	</body>
