--- a/inicial.html
+++ b/inicial.html
@@ -22,7 +22,7 @@
 	</head>
 
  <body>
-	<img class = "imagem1" src = "google_maps.JPG" alt = 'Google maps'>
+	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'>
 	<div class = 'texto'>
 
 		Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
@@ -55,7 +55,7 @@
 		    </div>
 
 		    <div class="col">
-		      <a href=""><i class="fas fa-question"></i></a>
+		      <a href=""><i class="fas fa-exclamation"></i></a>
 		    </div>
 
 		  </div>
