procura com clique pro endereço

--- a/procura.html
+++ b/procura.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href="procura.css" rel="stylesheet">
 		<body>
-			<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'>
-			<img class = "imagem2" src = "teclado.jpg" alt = 'Google maps'>
+			<img class = "imagem1" src = "google_maps.jpg" alt = 'Google maps'>
+			<a href="endereco.html"> <img class = "imagem2" src = "teclado.jpg" alt = 'Google maps'> </a>
 		</body>
 	</head>
