--- a/inicial.html
+++ b/inicial.html
@@ -47,7 +47,7 @@
 		  <div class="row">
 
 		    <div class="col search">
-		      <a href=""><i class="fas fa-search"></i></a>
+		      <a href="procura.html"><i class="fas fa-search"></i></a>
 		    </div>
 
 		    <div class="col">
