coloquei a quem somos

--- a/se_não_der.html
+++ b/se_não_der.html
@@ -23,7 +23,7 @@
 
  <body>
 	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'>
-	<!-- <div class = 'texto'>
+	<div class = 'texto'>
 
 		Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
 
@@ -40,26 +40,4 @@
 
 		</p>
 		
-	</div>		
- -->
-		<div class="container">
-  
-		  <div class="row">
-
-		    <div class="col search">
-		      <a href="procura.html"><i class="fas fa-search"></i></a>
-		    </div>
-
-		    <div class="col question">
-		     <a ><i class="fas fa-question"></i></a>
-		    </div>
-
-		    <div class="col">
-		      <a href="se_nao_der.html"><i class="fas fa-exclamation"></i></a>
-		    </div>
-
-		  </div>
-
-		</div>
-	
 	</body>
