--- a/inicial.html
+++ b/inicial.html
@@ -51,7 +51,7 @@
 		    </div>
 
 		    <div class="col question">
-		     <a ><i class="fas fa-question"></i></a>
+		     <a href='ajuda.html'><i class="fas fa-question"></i></a>
 		    </div>
 
 		    <div class="col">
