--- a/lojas.html
+++ b/lojas.html
@@ -23,12 +23,38 @@
 		<div class='loja'>
 			LOJA 1
 		</div>
+			<ul>Rua Elvira Ferraz, 8</ul>
 	</header>
+	<img class='fachada' src='fachada.jpg'>
 	<main>
-		
+		<img class='produto1' src='produto1.jpg'>
+		<div class='info'>
+			<ul>Descrição do Produto: alicate de unha</ul>
+			<ul>Preço: R$15,00</ul>
+		</div>
+		<img class='produto2' src='produto2.png'>
+		<div class='info2'>
+			<ul>Descrição do Produto: esmalte Risqué - Energia</ul>
+			<ul>Preço: R$3,50</ul>
+		</div>
+		<img class='produto3' src='produto3.png'>
+		<div class='info3'>
+			<ul>Descrição do Produto: esmalte Risqué - Shar Pei</ul>
+			<ul>Preço: R$3,50</ul>
+		</div>
+		<img class='produto4' src='produto4.png'>
+		<div class='info4'>
+			<ul>Descrição do Produto: esmalte Risqué - Husky</ul>
+			<ul>Preço: R$4,00</ul>
+		</div>
+		<img class='produto5' src='produto5.jpg'>
+		<div class='info5'>
+			<ul>Descrição do Produto: removedor de esmalte Beira Alta - 450mL</ul>
+			<ul>Preço: R$10,60</ul>
+		</div>
 	</main>
 	<footer>
-		<img class='voltar' src='blackleftarrowcircularbutton.jpg' alt='voltar'>
+		<a href="inicial.html"><img class='voltar' src='voltar.jpg' alt='Voltar'></a>
 	</footer>
 </body>
 
