linkei ajuda com lojas

--- a/ajuda.html
+++ b/ajuda.html
@@ -22,7 +22,7 @@
         
         			<div class="centered">
             			<h1>Lojas de Materiais</h1>
-            				<img class= 'esmalte' src = "esmalte.png" alt = 'esmalte'>
+            				<a href='lojas.html'><img class= 'esmalte' src = "esmalte.png" alt = 'esmalte'></a>
        				</div>
         			</div>
         
