--- a/endereco.html
+++ b/endereco.html
@@ -4,6 +4,7 @@
 		<link href="procura.css" rel="stylesheet">
 		<body>
 			<a href="inicial.html"> <img class = "imagem1" src = "endereco.jpg" alt = 'Google maps'>
+			<a href="lojas.html"> <img class = "pin_este" src = "pinamarelo.jpg" alt = 'Pin'></a>
 			<img class = "imagem2" src = "teclado.jpg" alt = 'Google maps'>
 		</body>
 	</head>
