--- a/inicial.html
+++ b/inicial.html
@@ -23,6 +23,8 @@
 
  <body>
 	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'>
+	<a href="lojas.html"> <img class = "pin_este" src = "pinamarelo.jpg" alt = 'Pin'></a>
+	<a href="lojas.html"> <img class = "pin_loja" src = "pinvvermelho.png" alt = 'Pin'></a>
 	<!-- <div class = 'texto'>
 
 		Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
