--- a/se_nao_der.html
+++ b/se_nao_der.html
@@ -27,18 +27,27 @@
 		<a href="inicial.html"> <i class="fas fa-undo-alt"></i>
 		</a>
 
-			Nós somos 4 meninas que estudam engenharia no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
+			Nós somos 4 enegenheiras em formação das áreas computação, mecânica e mecatrônica no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
 
 		<p>
 
 			Integrantes:
 
-			<ul>
+			<li>
 					Beatriz Alexandre
+			</li>
+
+			<li>
 					Beatriz Mie
+			</li>
+
+			<li>		
 					Manuela Castilla
+			</li>
+			
+			<li>		
 					Vitória de Almeida 
-			</ul>
+			</li>
 
 		</p>
 
