--- a/ajuda.html
+++ b/ajuda.html
@@ -12,7 +12,7 @@
         
         			<div class="centered">
             			<h1>Centro de Esterilização</h1>
-            				<img class = 'alicate'src = "alicate.png" alt = 'alicate'>
+            				<a href='esterilizacao.html'><img class = 'alicate'src = "alicate.png" alt = 'alicate'></a>
        				</div>
         
     			</div>
