--- a/inicial.html
+++ b/inicial.html
@@ -23,7 +23,7 @@
 
  <body>
 	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'>
-	<a href="lojas.html"> <img class = "pin_este" src = "pinamarelo.jpg" alt = 'Pin'></a>
+	<a href="esterilizacao.html"> <img class = "pin_este" src = "pinamarelo.jpg" alt = 'Pin'></a>
 	<a href="lojas.html"> <img class = "pin_loja" src = "pinvvermelho.png" alt = 'Pin'></a>
 	<!-- <div class = 'texto'>
 
