--- a/lojas.html
+++ b/lojas.html
@@ -54,7 +54,7 @@
 		</div>
 	</main>
 	<footer>
-		<a href="inicial.html"><img class='voltar' src='voltar.jpg' alt='Voltar'></a>
+		<a href="inicial.html"><img class='voltar' src='voltar.png' alt='Voltar'></a>
 	</footer>
 </body>
 
