--- a/inicial.html
+++ b/inicial.html
@@ -22,8 +22,8 @@
 	</head>
 
  <body>
-	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'>
-	<a href="esterilizacao.html"> <img class = "pin_este" src = "pinamarelo.jpg" alt = 'Pin'></a>
+	<img class = "imagem1" src = "sem_pin.JPEG" alt = 'Google maps'>
+	<a href="esterilizacao.html"> <img class = "pin_este" src = "pin_amarelo.png" alt = 'Pin'></a>
 	<a href="lojas.html"> <img class = "pin_loja" src = "pinvvermelho.png" alt = 'Pin'></a>
 	<!-- <div class = 'texto'>
 
