--- a/ajuda.html
+++ b/ajuda.html
@@ -3,7 +3,11 @@
 	<head>
 		<link href="ajuda.css" rel="stylesheet">
 		<body>
-			
+
+			<div class='texto'>
+            Significado de cada cor de pin:
+            </div>
+
             <a href="inicial.html"><img class = "imagem" src = "voltar.jpg" alt = 'Voltar'></a>
 
 
