--- a/se_nao_der.html
+++ b/se_nao_der.html
@@ -24,10 +24,10 @@
  <body>
 <!-- 	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'> -->
 	<div class = 'texto' >
-		<a href="inicial.html"> <i class="fas fa-undo-alt"></i>
+		<a href="inicial.html"> <!--<i class="fas fa-undo-alt"></i>-->
 		</a>
 
-			Nós somos 4 enegenheiras em formação das áreas computação, mecânica e mecatrônica no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
+			Nós somos 4 engenheiras em formação das áreas computação, mecânica e mecatrônica no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
 
 		<p>
 
@@ -44,12 +44,30 @@
 			<li>		
 					Manuela Castilla
 			</li>
-			
+
 			<li>		
 					Vitória de Almeida 
 			</li>
 
 		</p>
+		
+	<div class="container">
+  
+		  <div class="row">
+
+		    <div class="col search">
+		    </div>
+
+		    <div class="col return">
+		     <a href='inicial.html'><i class="fas fa-undo-alt"></i></a>
+		    </div>
+
+		    <div class="col question">
+		    </div>
+
+		  </div>
+
+		</div>
 
 		
 		
