--- a/se_nao_der.html
+++ b/se_nao_der.html
@@ -24,10 +24,15 @@
  <body>
 <!-- 	<img class = "imagem1" src = "aprocura.jpg" alt = 'Google maps'> -->
 	<div class = 'texto' >
+		<div class = 'título'>
+			QUEM SOMOS?
+		</div>
 		<a href="inicial.html"> <!--<i class="fas fa-undo-alt"></i>-->
 		</a>
 
-			Nós somos 4 engenheiras em formação das áreas computação, mecânica e mecatrônica no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo.
+		<div class='paragrafo'>
+			<p> Nós somos 4 engenheiras em formação das áreas computação, mecânica e mecatrônica no Insper, e entre os diversos projetos que realizamos no curso. Na matéria de Co-Design de Aplicativos tínhamos o objetivo de desenvolver um aplicativo a partir das entrevistas que realizamos com as Manicures, grupo de usuários escolhidos por nós. </p>
+			<p>Depois de conversar com 10 Manicures percebemos que o tempo gasto para se locomover era muito grande. A partir disso, decidimos criar esse aplicativo para que as manicures não precisem ir até lugares muito longes para esterilizar seus materiais e comprar materiais novos, otimizando seu tempo. </p>
 
 		<p>
 
@@ -50,7 +55,8 @@
 			</li>
 
 		</p>
-		
+		</div>
+	</div>	
 	<div class="container">
   
 		  <div class="row">
@@ -65,9 +71,10 @@
 		    <div class="col question">
 		    </div>
 
-		  </div>
+		   </div>
+	</div>
 
-		</div>
+		
 
 		
 		
